Commit prep to cherry pick
Make sure to not commit and have it be unstaged

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <img src="kraken.png"/>
         </div>
         <div class="bio-right">
-          <h2>Enter your name here</h2>
-          <p> Share something about yourself </p>
+          <h2>First Last</h2>
+          <p> Insightful personal detail </p>
         </div>
       </div>
       <!-- to here  -->
